# target-mysql

./: README.md  docker-compose.yml  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml
target_mysql/: __init__.py  connector.py  sinks.py  target.py
tests/: __init__.py  test_core.py
tests/data_files/: decimal_data.singer
tests/samples/aapl/: __main__.py  aapl.py
tests/samples/sample_tap_countries/: countries_streams.py  countries_tap.py
