[tool.poetry]
name = "target-mysql"
version = "0.0.1"
description = "`target-mysql` is a Singer target for MySQL, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["AutoIDM"]
keywords = [
    "ELT",
    "MySQL",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = { version="^0.30.0" }
pymysql = "^1.1.0"
fs-s3fs = { version = "^1.1.1", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
singer-sdk = { version="^0.30.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["target_mysql"]
target-version = "py37"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["target_mysql"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-mysql = 'target_mysql.target:TargetMySQL.cli'
